--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
             </linearGradient>
           </defs>
         </svg>
-
+ 
         <div class="row justify-content-end">
           <div class="col-lg-3">
             <div class="bt">
@@ -439,7 +439,7 @@
                 <h5> Foundation </h5>
                 <ul>
                   <li>
-                    <a href="mailto:info@sati.org">info@sati.org</a>
+                    <a href="mailto:info@sati.org">info@mysati.io</a>
                   </li>
 
                 </ul>
