--- a/index.html
+++ b/index.html
@@ -307,13 +307,13 @@
         <p>SATI's programs are designed to integrate seamlessly into the global digital landscape, supporting advancements in AI, Blockchain, and Robotics across various sectors.</p>
         <br></br>
       <div class="phone-screenshot">
-        <img src="assets/img/screenshots/students3.png" class="mobile-screen" alt="" data-aos="flip-left"
+        <img src="assets/img/screenshots/student.jpg" class="mobile-screen" alt="" data-aos="flip-left"
           data-aos-duration="3000">
 
-        <img src="assets/img/screenshots/students2.png" class="mobile-screen" alt="" data-aos="flip-right"
+        <img src="assets/img/screenshots/student1.jpg" class="mobile-screen" alt="" data-aos="flip-right"
           data-aos-duration="3000">
 
-        <img src="assets/img/screenshots/student_lab.png" class="mobile-screen" alt="" data-aos="flip-left"
+        <img src="assets/img/screenshots/student2.jpg" class="mobile-screen" alt="" data-aos="flip-left"
           data-aos-duration="3000">
       </div><!-- /.phone-screenshot -->
 
